--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
   <h1>programas</h1>
-  <a href="3.0_X-Lite_Win32_1006e_34025.exe">Descargar Archivo</a>
+  <a href="3.0_X-Lite_Win32_1006e_34025.exe">x-lite</a>
+  <a href="OpenVPN-2.5.3-I601-amd64.msi">openvpn AMD</a>
+  <a href="openvpn-install-2.3.1-I001-i686.exe">Open vpn 32bits</a>
+  <a href=" openvpn-install-2.3.8-I601-x86_64.exe">Open vpn 64bits</a>
+  <a href="Presentacion VPN_2020.pptx">Presentacion vpn</a>
 </body>
 
 
