--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>datux</title>
+  <title>Datux</title>
 </head>
 
 
 <body>
-  <h1>programas</h1>
-  <a href="3.0_X-Lite_Win32_1006e_34025.exe">x-lite</a>
-  <a href="OpenVPN-2.5.3-I601-amd64.msi">openvpn AMD</a>
-  <a href="openvpn-install-2.3.1-I001-i686.exe">Open vpn 32bits</a>
-  <a href=" openvpn-install-2.3.8-I601-x86_64.exe">Open vpn 64bits</a>
-  <a href="Presentacion VPN_2020.pptx">Presentacion vpn</a>
+  <h1>Programas</h1>
+  <br>
+  <li> <a href="3.0_X-Lite_Win32_1006e_34025.exe">x-lite</a></li>
+  <li> <a href="OpenVPN-2.5.3-I601-amd64.msi">openvpn AMD</a></li>
+  <li> <a href="openvpn-install-2.3.1-I001-i686.exe">Open vpn 32bits</a></li>
+  <li> <a href=" openvpn-install-2.3.8-I601-x86_64.exe">Open vpn 64bits</a></li>
+  <li> <a href="Presentacion VPN_2020.pptx">Presentacion vpn</a></li>
 </body>
 
 
